# caff-previewer

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
doc/: id_000000_00_EXCEPTION_ACCESS_VIOLATION.caff  testing.md
src/: caff_tools.c  caff_tools.h  ciff_tools.c  ciff_tools.h  magic_memory.c  magic_memory.h  main.c  pixeldata_utils.c  pixeldata_utils.h  utils.c  utils.h
